# perekup_helper

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  run_scheduler.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 06828cd0bb13_add_deal_score_and_duplicate_of_id.py  a1b2c3d4e5f6_add_score_to_listing_analysis.py  b6998ad6c869_create_listings_and_listing_analysis_.py  c1d2e3f4a5b6_change_photos_to_jsonb.py  c3d4e5f6a7b8_add_deduplication_columns.py
app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py
app/db/: session.py
app/models/: __init__.py  listing.py  listing_analysis.py  sync_listing.py
app/parsers/: __init__.py  analyzer.py  autoru.py  avito.py  avito_detail.py  base.py  drom.py  ingestion.py  normalizer.py  pipeline.py  proxy_manager.py
app/routers/: listings.py  stats.py
app/routes/: listings.py  stats.py
app/services/: analysis_pool.py  comparable_sales.py  deal_scorer.py  deduplication.py  description_features.py  mlflow_tracking.py  pricing.py  pricing_trainer.py  stale_detection.py
app/templates/: base.html  detail.html  index.html  stats.html
autoru_parser/: card_parser.py  config.py  http_client.py  listing_parser.py  models.py  pipeline.py
avipars/: .gitignore  AvitoParser.py  Dockerfile  README.md  common_data.py  config.toml  config.toml.example  db_service.py  docker-compose.yml  dto.py  get_cookies.py  hide_private_data.py  lang.py  load_config.py  models.py  parser_cls.py  playwright_setup.py
avipars/docs/: ANTIBLOCK.md  NOTIFICATIONS.md
avipars/filters/: ads_filter.py
avipars/utils/: parse_phone.py  prompt_user_login.py
avito_parser/: analysis.py  card_parser.py  db.py  listing_parser.py  market_price.py  pipeline.py  price_analyzer.py  restapp_client.py  restapp_pipeline.py  scheduler.py  user_agents.py
bot/: config.py  main.py
bot/db/: models.py  session.py
bot/handlers/: callbacks.py  filters.py  start.py  stats.py
bot/services/: checker.py  db_checker.py  notifier.py
deploy/: deploy.sh  nginx.conf  perekup.service
perekup_helper/: __init__.py  batch.py  categorizer.py  cloudru_client.py  models.py
scripts/: __main__.py  backfill_avito_details.py  debug_autoru_html.py  deploy.sh  enrich_avito.py  enrich_from_titles.py  evaluate_catboost_text.py  evaluate_description_features.py  evaluate_mape.py  evaluate_mape_fast.py  evaluate_stacking.py  seed.py  warmup_autoru.py
src/avito_parser/: card_parser.py  config.py  http_client.py  listing_parser.py  (+3 more)
storage/: cookies_external.json
tests/: conftest.py  test_analysis_pool.py  test_autoru_card_parser.py  test_autoru_listing_parser.py  test_autoru_parser.py  test_avito_db.py  test_avito_parser.py  test_batch.py  test_bot.py  test_card_layout.py  test_card_parser.py  test_categorizer.py  test_checker.py  test_comparable_sales.py  test_dark_mode.py  test_dashboard_layout.py  test_database_checker.py  test_deal_scorer.py  test_deduplication.py  test_detail_card_v2.py  test_drom_parser.py  test_handlers.py  test_listing_parser.py  test_listings.py  test_models.py  test_normalizer_validation.py  test_notifier.py  test_pipeline_analysis.py  test_price_analyzer.py  test_pricing_trainer.py  test_routes.py  test_scheduler.py  test_seed.py  test_smoke.py  test_stale_detection.py  test_stats.py
(+33 files in other folders)
