[project]
name = "perekup-helper"
version = "0.1.0"
description = "Агрегатор авто-объявлений с AI-категоризацией и Telegram-ботом"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.29,<1",
    "aiogram>=3.13,<4",
    "httpx>=0.25,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "anthropic>=0.39,<1",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.15,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "bot*", "perekup_helper*", "avito_parser*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
