[project]
name = "perekup-helper"
version = "0.1.0"
description = "Агрегатор авто-объявлений с AI-категоризацией и Telegram-ботом"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.29,<1",
    "aiogram>=3.13,<4",
    "httpx>=0.25,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "jinja2>=3.1,<4",
    "apscheduler>=3.10,<4",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "catboost>=1.2,<2",
    "lightgbm>=4.0,<5",
    "scikit-learn>=1.4,<2",
    "mlflow>=2.22,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.15,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "bot*", "perekup_helper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "arg-type", "misc"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
]
